Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-3031

wrong including path in gutil/atomicos.h

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • n/a
    • None
    • None

    Description

      In gutil/atomicos.h, there are paltform specific macros definitions as following

      #if defined(THREAD_SANITIZER)
      #include "kudu/gutil/atomicops-internals-tsan.h" // IWYU pragma: export
      #elif defined(__APPLE__)
      #include "kudu/gutil/atomicops-internals-macosx.h" // IWYU pragma: export
      #elif defined(__GNUC__) && defined(ARMV6)
      #include "kudu/gutil/atomicops-internals-arm-v6plus.h" // IWYU pragma: export
      #elif defined(ARMV3)
      #include "kudu/gutil/atomicops-internals-arm-generic.h" // IWYU pragma: export
      #elif defined(__GNUC__) && (defined(__i386) || defined(__x86_64__))
      #include "kudu/gutil/atomicops-internals-x86.h" // IWYU pragma: export
      #elif defined(__GNUC__) && defined(ARCH_POWERPC64)
      #include "kudu/gutil/atomicops-internals-powerpc.h" // IWYU pragma: export
      #elif defined(OS_WINDOWS)
      #include "kudu/gutil/tomicops-internals-windows.h" // IWYU pragma: export
      #else
      #error You need to implement atomic operations for this architecture
      #endif
      

      but the atomicops-internals-arm-v6plus.h, atomicops-internals-arm-generic.h and tomicops-internals-windows.h are under gutil/auxiliary/

      Attachments

        Activity

          People

            Unassigned Unassigned
            seanlau liusheng
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: