KUDU-3031. Fix wrong including path in gutil/atomicops.h

Change-Id: Iab0db0660e6344ef5d07c72f0839bab3e291cd7f
Reviewed-on: http://gerrit.cloudera.org:8080/14936
Tested-by: Kudu Jenkins
Reviewed-by: Adar Dembo <adar@cloudera.com>